--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     ],
     "require": {
         "php": "^8.2",
-        "illuminate/support": "^9.0"
+        "illuminate/support": "^9.0|^10.0"
     },
     "require-dev": {
         "graham-campbell/testbench": "^6.0",
